--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "autoprefixer": "^10.4.20",
     "cra-template": "1.2.0",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^11.16.0",
+    "lucide-react": "^0.473.0",
     "postcss": "^8.4.49",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
